--- a/12장 연습문제/12.html
+++ b/12장 연습문제/12.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CSS Grid Layout</title>
+    <title>389페이지 실습</title>
     <style>      
       .gallery{
         width:700px;   
@@ -53,4 +53,5 @@
       <img class="photo6" src="images/photo-6.jpg" alt="나뭇가지에 앉아있는 빨간 새">
     </div>
   </body>
+
   </html>
